--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  "config": {
+    "ionic_copy": "./config/copy.config.js"
+  },
   "dependencies": {
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
@@ -26,9 +29,17 @@
     "@ionic-native/web-intent": "^4.5.3",
     "@ionic/pro": "1.0.17",
     "@ionic/storage": "2.1.3",
+    "angular-froala-wysiwyg": "^2.7.6",
     "com-darryncampbell-cordova-plugin-intent": "0.0.19",
+    "cordova-android": "^4.1.1",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "jquery": "^3.3.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -40,7 +51,13 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "com-darryncampbell-cordova-plugin-intent": {}
-    }
+      "com-darryncampbell-cordova-plugin-intent": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": []
   }
 }
